--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="hero">
+        <h3>Coming Soon</h3>
+        <h1>OurBrand New <br />Website Is On It's Ways</h1>
+        <p>Subscribe for more details</p>
+        <form name="submit-to-google-sheet">
+            <input type="email" name="Email" placeholder="Your email id" required>
+            <button type="submit"> <img src="/send-icon.png" alt="" width="30px"></button>
+        </form>
+        <span id="msg"></span>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
